==> cesanta/mongoose-os/platforms/esp32/src/esp32_uart.c <==
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <sys/param.h>
#include "driver/periph_ctrl.h"
#include "driver/uart.h"
#include "esp32/rom/uart.h"
#include "esp_attr.h"
#include "esp_intr_alloc.h"
#include "soc/dport_access.h"
#include "soc/uart_reg.h"
#include "common/cs_dbg.h"
#include "common/cs_rbuf.h"
#include "mgos_gpio.h"
#include "mgos_uart_hal.h"
#define UART_RX_INTS (UART_RXFIFO_FULL_INT_ENA | UART_RXFIFO_TOUT_INT_ENA)
#define UART_TX_INTS (UART_TXFIFO_EMPTY_INT_ENA)
#define UART_INFO_INTS (UART_RXFIFO_OVF_INT_ENA | UART_CTS_CHG_INT_ENA)
#define UART_TX_FIFO_SIZE 128

IRAM bool esp32_uart_cts(int uart_no) {
  return (DPORT_READ_PERI_REG(UART_STATUS_REG(uart_no)) & UART_CTSN) ? 1 : 0;
}

void mgos_uart_hal_dispatch_rx_top(struct mgos_uart_state *us) {
  int uart_no = us->uart_no;
  struct mbuf *rxb = &us->rx_buf;
  uint32_t rxn = 0;
  /* RX */
  if (mgos_uart_rxb_free(us) > 0 && esp32_uart_rx_fifo_len(uart_no) > 0) {
    int linger_counter = 0;
    /* 32 here is a constant measured (using system_get_time) to provide
     * linger time of rx_linger_micros. It basically means that one iteration
     * of the loop takes 3.2 us.
     *
     * Note: lingering may starve TX FIFO if the flow is bidirectional.
     * TODO(rojer): keep transmitting from tx_buf while lingering.
     */
    int max_linger = us->cfg.rx_linger_micros / 10 * 32;
#ifdef MEASURE_LINGER_TIME
    uint32_t st = system_get_time();
#endif
    while (mgos_uart_rxb_free(us) > 0 && linger_counter <= max_linger) {
      size_t rx_len = esp32_uart_rx_fifo_len(uart_no);
      if (rx_len > 0) {
        rx_len = MIN(rx_len, mgos_uart_rxb_free(us));
        if (rxb->size < rxb->len + rx_len) mbuf_resize(rxb, rxb->len + rx_len);
        while (rx_len > 0) {
          uint8_t b = rx_byte(uart_no);
          mbuf_append(rxb, &b, 1);
          rx_len--;
          rxn++;
        }
        if (linger_counter > 0) {
          us->stats.rx_linger_conts++;
          linger_counter = 0;
        }
      } else {
        linger_counter++;
      }
    }
#ifdef MEASURE_LINGER_TIME
    fprintf(stderr, "Time spent reading: %u us\n", system_get_time() - st);
#endif
    us->stats.rx_bytes += rxn;
  }
  DPORT_WRITE_PERI_REG(UART_INT_CLR_REG(uart_no), UART_RX_INTS);
}

void mgos_uart_hal_dispatch_tx_top(struct mgos_uart_state *us) {
  int uart_no = us->uart_no;
  struct esp32_uart_state *uds = (struct esp32_uart_state *) us->dev_data;
  DPORT_CLEAR_PERI_REG_MASK(UART_INT_ENA_REG(uart_no), UART_TX_INTS);
  uint32_t txn = uds->isr_tx_bytes;
  txn += fill_tx_fifo(us);
  mbuf_remove(&us->tx_buf, txn);
  uds->isr_tx_bytes = 0;
  us->stats.tx_bytes += txn;
  DPORT_WRITE_PERI_REG(UART_INT_CLR_REG(uart_no), UART_TX_INTS);
}

void mgos_uart_hal_dispatch_bottom(struct mgos_uart_state *us) {
  uint32_t int_ena = UART_INFO_INTS;
  struct esp32_uart_state *uds = (struct esp32_uart_state *) us->dev_data;
  /* Determine which interrupts we want. */
  if (us->rx_enabled && mgos_uart_rxb_free(us) > 0) {
    int_ena |= UART_RX_INTS;
  }
  if (us->tx_buf.len > 0) {
    int_ena |= UART_TX_INTS;
  } else if (uds->hd) {
    if (mgos_gpio_read_out(uds->tx_en_gpio) == uds->tx_en_gpio_val) {
      int_ena |= UART_TX_DONE_INT_ENA;
    }
  }
  DPORT_WRITE_PERI_REG(UART_INT_ENA_REG(us->uart_no), int_ena);
}

void mgos_uart_hal_flush_fifo(struct mgos_uart_state *us) {
  while (esp32_uart_tx_fifo_len(us->uart_no) > 0) {
  }
  uart_tx_wait_idle(us->uart_no);
}

bool mgos_uart_hal_init(struct mgos_uart_state *us) {
  int uart_no = us->uart_no;
  if (uart_no < 0 || uart_no > 2) return false;
  struct esp32_uart_state *uds =
      (struct esp32_uart_state *) calloc(1, sizeof(*uds));
  us->dev_data = uds;
  int int_src;
  if (uart_no == 0) {
    int_src = ETS_UART0_INTR_SOURCE;
    periph_module_enable(PERIPH_UART0_MODULE);
  } else if (uart_no == 1) {
    int_src = ETS_UART1_INTR_SOURCE;
    periph_module_enable(PERIPH_UART1_MODULE);
  } else {
    int_src = ETS_UART2_INTR_SOURCE;
    periph_module_enable(PERIPH_UART2_MODULE);
  }
  /* Start with ints disabled. */
  DPORT_WRITE_PERI_REG(UART_INT_ENA_REG(us->uart_no), 0);
  esp_err_t r =
      esp_intr_alloc(int_src, ESP_INTR_FLAG_SHARED | ESP_INTR_FLAG_IRAM,
                     (void (*)(void *)) esp32_handle_uart_int, us, &uds->ih);
  if (r != ESP_OK) {
    LOG(LL_ERROR, ("Error allocating int for UART%d: %d", us->uart_no, r));
    return false;
  }
  if (uart_no != 2) {
    /* For UART0 and 1 use 128 byte FIFOs. */
    DPORT_WRITE_PERI_REG(UART_MEM_CONF_REG(uart_no), 0x88);
  } else {
    /*
     * UART2 is special: there are 384 unused bytes after the end of its RX FIFO
     * NB: TRM 13.3.3 fig.81 is wrong: UART0/1/2/ Rx_FIFOs start at 384/512/640,
     * i.e. there is no gap at 384-512 as the figure suggests.
     */
    DPORT_WRITE_PERI_REG(UART_MEM_CONF_REG(uart_no), 0x98);
  }
  empty_rx_fifo(uart_no);
  return true;
}

bool mgos_uart_hal_configure(struct mgos_uart_state *us,
                             const struct mgos_uart_config *cfg) {
  int uart_no = us->uart_no;

  if (!esp32_uart_validate_config(cfg)) {
    return false;
  }

  struct esp32_uart_state *uds = (struct esp32_uart_state *) us->dev_data;

  DPORT_WRITE_PERI_REG(UART_INT_ENA_REG(uart_no), 0);

  uint32_t conf0 =
      DPORT_READ_PERI_REG(UART_CONF0_REG(uart_no)) & UART_TICK_REF_ALWAYS_ON;

  if (cfg->baud_rate > 0) {
    bool baud_rate_changed = false;
    /* Try to use REF_TICK if possible, fall back to APB. */
    uint32_t div, frac;
    calc_clkdiv(REF_CLK_FREQ, cfg->baud_rate, &div, &frac);
    if (div >= 3) {
      if (conf0 & UART_TICK_REF_ALWAYS_ON) {
        conf0 &= ~UART_TICK_REF_ALWAYS_ON;
        baud_rate_changed = true;
      }
    } else {
      calc_clkdiv(APB_CLK_FREQ, cfg->baud_rate, &div, &frac);
      if (!(conf0 & UART_TICK_REF_ALWAYS_ON)) {
        conf0 |= UART_TICK_REF_ALWAYS_ON;
        baud_rate_changed = true;
      }
    }
    uint32_t clkdiv_v = ((frac & UART_CLKDIV_FRAG_V) << UART_CLKDIV_FRAG_S) |
                        ((div & UART_CLKDIV_V) << UART_CLKDIV_S);
    uint32_t old_clkdiv_v = DPORT_READ_PERI_REG(UART_CLKDIV_REG(uart_no));
    if (clkdiv_v != old_clkdiv_v) {
      baud_rate_changed = true;
    }
    if (baud_rate_changed) {
      mgos_uart_hal_flush_fifo(us);
      DPORT_WRITE_PERI_REG(UART_CLKDIV_REG(uart_no), clkdiv_v);
      DPORT_WRITE_PERI_REG(UART_CONF0_REG(uart_no), conf0);
    }
  }

  if (uart_set_pin(uart_no, cfg->dev.tx_gpio, cfg->dev.rx_gpio,
                   (cfg->rx_fc_type == MGOS_UART_FC_HW ? cfg->dev.rts_gpio
                                                       : UART_PIN_NO_CHANGE),
                   (cfg->tx_fc_type == MGOS_UART_FC_HW ? cfg->dev.cts_gpio
                                                       : UART_PIN_NO_CHANGE)) !=
      ESP_OK) {
    return false;
  }

  if (cfg->dev.tx_inverted) {
    conf0 |= UART_TXD_INV;
  }

  if (cfg->dev.rx_inverted) {
    conf0 |= UART_RXD_INV;
  }

  switch (cfg->num_data_bits) {
    case 5:
      break;
    case 6:
      conf0 |= 1 << UART_BIT_NUM_S;
      break;
    case 7:
      conf0 |= 2 << UART_BIT_NUM_S;
      break;
    case 8:
      conf0 |= 3 << UART_BIT_NUM_S;
      break;
    default:
      return false;
  }

  switch (cfg->parity) {
    case MGOS_UART_PARITY_NONE:
      break;
    case MGOS_UART_PARITY_EVEN:
      conf0 |= UART_PARITY_EN;
      break;
    case MGOS_UART_PARITY_ODD:
      conf0 |= (UART_PARITY_EN | UART_PARITY);
      break;
  }

  DPORT_WRITE_PERI_REG(UART_RS485_CONF_REG(uart_no), 0);
  switch (cfg->stop_bits) {
    case MGOS_UART_STOP_BITS_1:
      conf0 |= 1 << UART_STOP_BIT_NUM_S;
      break;
    case MGOS_UART_STOP_BITS_1_5:
      conf0 |= 2 << UART_STOP_BIT_NUM_S;
      break;
    case MGOS_UART_STOP_BITS_2:
      /* Workaround for hardware bug: receiver does not implement 2 stop bits
       * correctly, so instead RS485 feature of delaying stop bits is used:
       * 1 stop bit + 1 bit delay. */
      conf0 |= 1 << UART_STOP_BIT_NUM_S;
      DPORT_SET_PERI_REG_MASK(UART_RS485_CONF_REG(uart_no), UART_DL1_EN);
      break;
  }

  if (cfg->tx_fc_type == MGOS_UART_FC_HW) {
    conf0 |= UART_TX_FLOW_EN;
  }
  DPORT_WRITE_PERI_REG(UART_CONF0_REG(uart_no), conf0);

  uint32_t conf1 = ((cfg->dev.tx_fifo_empty_thresh & UART_TXFIFO_EMPTY_THRHD_V)
                    << UART_TXFIFO_EMPTY_THRHD_S) |
                   ((cfg->dev.rx_fifo_full_thresh & UART_RXFIFO_FULL_THRHD_V)
                    << UART_RXFIFO_FULL_THRHD_S);
  conf1 |= (cfg->dev.tx_fifo_empty_thresh << 8);
  if (cfg->dev.rx_fifo_alarm >= 0) {
    conf1 |= UART_RX_TOUT_EN | ((cfg->dev.rx_fifo_alarm & UART_RX_TOUT_THRHD_V)
                                << UART_RX_TOUT_THRHD_S);
  }
  if (cfg->rx_fc_type == MGOS_UART_FC_HW && cfg->dev.rx_fifo_fc_thresh > 0) {
    /* UART_RX_FLOW_EN will be set in uart_start. */
    conf1 |=
        UART_RX_FLOW_EN | ((cfg->dev.rx_fifo_fc_thresh & UART_RX_FLOW_THRHD_V)
                           << UART_RX_FLOW_THRHD_S);
  }
  DPORT_WRITE_PERI_REG(UART_CONF1_REG(uart_no), conf1);
  /* Disable idle after transmission, reset defaults are non-zero. */
  DPORT_WRITE_PERI_REG(UART_IDLE_CONF_REG(uart_no), 0);

  if (cfg->rx_fc_type == MGOS_UART_FC_SW && cfg->dev.rx_fifo_fc_thresh > 0) {
    uint32_t swfc_conf = 0x13110000;
    /* Note: TRM's description of these fields is incorrect (swapped?) */
    swfc_conf |= ((cfg->dev.rx_fifo_fc_thresh & 0xff) << 8);
    swfc_conf |= (cfg->dev.rx_fifo_full_thresh & 0xff);  // UART_XON_THRESHOLD
    DPORT_WRITE_PERI_REG(UART_SWFC_CONF_REG(uart_no), swfc_conf);
    // Turn SW FC on. Note: this also sends a XON char to unblock transmitter.
    DPORT_WRITE_PERI_REG(UART_FLOW_CONF_REG(uart_no), 1);
  } else {
    DPORT_WRITE_PERI_REG(UART_FLOW_CONF_REG(uart_no), 0);
  }

  uds->hd = cfg->dev.hd;
  uds->tx_en_gpio = cfg->dev.tx_en_gpio;
  uds->tx_en_gpio_val = cfg->dev.tx_en_gpio_val;
  if (uds->hd) {
    mgos_gpio_write(uds->tx_en_gpio, !uds->tx_en_gpio_val);  // RX
    mgos_gpio_set_mode(uds->tx_en_gpio, MGOS_GPIO_MODE_OUTPUT);
  }

  return true;
}

void mgos_uart_hal_set_rx_enabled(struct mgos_uart_state *us, bool enabled) {
  int uart_no = us->uart_no;
  if (enabled) {
    if (us->cfg.rx_fc_type == MGOS_UART_FC_HW) {
      DPORT_SET_PERI_REG_MASK(UART_CONF1_REG(uart_no), UART_RX_FLOW_EN);
    }
    DPORT_SET_PERI_REG_MASK(UART_INT_ENA_REG(uart_no), UART_RX_INTS);
  } else {
    if (us->cfg.rx_fc_type == MGOS_UART_FC_HW) {
      /* With UART_SW_RTS = 0 in CONF0 this throttles RX (sets RTS = 1). */
      DPORT_CLEAR_PERI_REG_MASK(UART_CONF1_REG(uart_no), UART_RX_FLOW_EN);
    }
    DPORT_CLEAR_PERI_REG_MASK(UART_INT_ENA_REG(uart_no), UART_RX_INTS);
  }
}

uint32_t esp32_uart_raw_ints(int uart_no) {
  return DPORT_READ_PERI_REG(UART_INT_RAW_REG(uart_no));
}

uint32_t esp32_uart_int_mask(int uart_no) {
  return DPORT_READ_PERI_REG(UART_INT_ENA_REG(uart_no));
}
